--- a/index.html
+++ b/index.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BlueApple Smart Link</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BlueApple Smart Link</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      padding: 50px;
+      background-color: #f9f9f9;
+    }
+    h1 {
+      color: #2a2a2a;
+    }
+    p {
+      color: #555;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
-    <h1>BlueApple Application Team ... </h1>
-    <script>
-        // الحصول على معلومات الجهاز
-        const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+  <h1>جارٍ تحويلك إلى تطبيق BlueApple...</h1>
+  <p>يرجى الانتظار لحظات، سيتم فتح المتجر المناسب تلقائيًا</p>
 
-        // تأخير التحويل 2 ثانية لعرض الرسالة
-        setTimeout(function() {
-            // فحص نوع الجهاز وتحويل المستخدم
-            if (/android/i.test(userAgent)) {
-                // تحويل مستخدمي Android
-                window.location.href = "https://play.google.com/store/apps/details?id=com.Linktsp.BlueAppleMarket&pcampaignid=web_share";
-            } else if (/iPhone|iPad|iPod/i.test(userAgent)) {
-                // تحويل مستخدمي iOS
-                window.location.href = "https://apps.apple.com/app/id6503000547";
-            } else {
-                // تحويل إلى رابط بديل إذا لم يكن Android أو iOS
-                window.location.href = "https://www.facebook.com/blueapplemarket";
-            }
-        }, 500); // تأخير 2 ثانية قبل التحويل
-    </script>
+  <script>
+    const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+
+    setTimeout(function () {
+      if (/android/i.test(userAgent)) {
+        window.location.href = "https://play.google.com/store/apps/details?id=com.Linktsp.BlueAppleMarket&pcampaignid=web_share";
+      } else if (/iPhone|iPad|iPod/i.test(userAgent)) {
+        window.location.href = "https://apps.apple.com/app/id6503000547";
+      } else {
+        window.location.href = "https://www.facebook.com/blueapplemarket";
+      }
+    }, 1000); // وقت أقصر = استجابة أفضل
+  </script>
 </body>
 </html>
